--- a/index.html
+++ b/index.html
@@ -1,46 +1,136 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>康文昌的在线HTML 教学小工具</title>
-    <style>  
-      body {
-        margin: 0;
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>布奇的个人主页</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    .header {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      padding: 60px 20px;
+      text-align: center;
+      color: white;
+    }
+
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      border: 5px solid white;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .profile-img:hover {
+      transform: scale(1.05);
+    }
+
+    .content {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 40px 20px;
+      background-color: white;
+    }
+
+    .message-card {
+      background: white;
+      border-radius: 10px;
+      padding: 30px;
+      margin: 20px 0;
+      box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
+      transition: transform 0.3s ease;
+    }
+
+    .message-card:hover {
+      transform: translateY(-5px);
+    }
+
+    .message {
+      font-size: 1.1em;
+      margin: 10px 0;
+      color: #4a5568;
+    }
+
+    .footer {
+      background-color: #2d3748;
+      color: white;
+      text-align: center;
+      padding: 30px 20px;
+      margin-top: 40px;
+    }
+
+    .footer a {
+      color: #63b3ed;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .footer a:hover {
+      color: #90cdf4;
+    }
+
+    .date {
+      display: inline-block;
+      background-color: #4299e1;
+      color: white;
+      padding: 5px 15px;
+      border-radius: 20px;
+      font-size: 0.9em;
+      margin: 10px 0;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
       }
-    </style>
-  </head>
-  <body>
-	 <div style="
-   background-color: #f1f1f1;
-   text-align: center;
-   padding: 40px;
-   ">
-    <img src="https://i.imgs.ovh/2025/01/21/ZEI9.jpeg" alt="buqi" width="80px" height="80px">
-   </div>
-	 <div style="
-   max-width: 700px:
-   margin: 30px auto;
-   padding: 15px;
-   line-height: 1.7;
 
-   ">
-     <p>你好啊布奇</p>
-     <p>你终于成功写出来了</p>
-     <p>这是你的第一个网站呀</p>
-     <p>今天是2025.1.21</p>
-     <p>希望你继续加油</p>
-     <p>让我们接下来更加精彩的活下去吧</p>
-   </div>
-	 <div style="
-   background-color:#f1f1f1;
-   text-align: center;
-   padding: 40px;
-   font-size: 12px;
-   ">
-   <p>我的网站</p>
-   <a href="https://buqi.com/">友情链接</a>
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
-   </div>
-  </body>
+    .animate-fade-in {
+      animation: fadeIn 1s ease forwards;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="header animate-fade-in">
+    <img src="/api/placeholder/150/150" alt="布奇的头像" class="profile-img">
+    <h1 style="margin-top: 20px; font-size: 2.5em;">欢迎来到布奇的空间</h1>
+    <p style="margin-top: 10px; font-size: 1.2em;">分享我的故事和想法</p>
+  </div>
+
+  <div class="content">
+    <div class="message-card animate-fade-in">
+      <span class="date">2025年1月21日</span>
+      <p class="message">你好啊，布奇！</p>
+      <p class="message">恭喜你成功创建了自己的第一个网站！</p>
+      <p class="message">这是一个激动人心的开始，相信接下来的旅程会更加精彩。</p>
+      <p class="message">让我们继续努力，创造属于自己的精彩人生！</p>
+    </div>
+  </div>
+
+  <footer class="footer">
+    <p style="margin-bottom: 10px;">布奇的个人网站</p>
+    <a href="https://buqi.com/" target="_blank">访问我的博客</a>
+  </footer>
+</body>
+
 </html>
