修改了头像

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 <body>
   <div class="header animate-fade-in">
-    <img src="/api/placeholder/150/150" alt="布奇的头像" class="profile-img">
+    <img src="./头像.jpg" alt="布奇的头像" class="profile-img">
     <h1 style="margin-top: 20px; font-size: 2.5em;">欢迎来到布奇的空间</h1>
     <p style="margin-top: 10px; font-size: 1.2em;">分享我的故事和想法</p>
   </div>
